# gravHydro

./: .cruft.json  .gitignore  README.rst  pyproject.toml  tox.ini
docs/: conf.py  index.html  index.rst  sph_documentation.html
docs/widgets/: tree_visualization.html
gravhydro/: __init__.py  simulation.py
gravhydro/gravity/: __init__.py  changes.py  numba_gravity.py  tree.py
gravhydro/hydro/: # Code Citations.md  __init__.py  acceleration.py  density.py  generalProperty.py  kernel.py  numba_hydro.py  pressure.py  speedAnalysis.ipynb  sph.py
gravhydro/integration/: __init__.py  leapfrog.py
gravhydro/utils/: __init__.py  units.py
licenses/: LICENSE.rst
testing_grounds/: check_energy.ipynb  compare_with_gravhopper.ipynb  density_estimator_docs.md  gravity copy.ipynb  gravity.ipynb  missing_equations.md  numba_benchmark.ipynb  plummerSphere.ipynb
testing_grounds/gravity/: compare_with_gravhopper.ipynb  create_tree_gif.py  create_tree_orbit_gif.py  diskGalaxy.ipynb  gravity.ipynb  merging.ipynb  plummerSphere.ipynb
testing_grounds/sph/: coolplots.ipynb  dam_break.ipynb  density_estimation.ipynb  doc.ipynb  fluid_ex.ipynb  fluid_example.ipynb  gas_cloud_collapse_ai.ipynb  gradients.ipynb  kernelInterpolation.ipynb  kernel_funct.ipynb  pressureAcceleration.ipynb  testing.ipynb
