[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "gravhydro"
description = "A hydrodynamics + gravity code. Gravity is solved with a Barnes-Hut style tree code and hydrodynamics with smoothed-particle hydrodynamics (SPH)."
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Gabriel Pfaffman", email = "gabriel.pfaffman@mail.utoronto.ca" },
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["gravhydro*"]

[tool.setuptools_scm]
version_file = "gravhydro/version.py"

[tool.pytest.ini_options]
testpaths = [
  "gravhydro",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = ["gravhydro[\\/]_dev"]

[tool.coverage.run]
omit = [
 "gravhydro/__init*",
 "gravhydro/conftest.py",
 "gravhydro/*setup_package*",
 "gravhydro/tests/*",
 "gravhydro/*/tests/*",
 "gravhydro/extern/*",
 "gravhydro/version*",
 "*/gravhydro/__init*",
 "*/gravhydro/conftest.py",
 "*/gravhydro/*setup_package*",
 "*/gravhydro/tests/*",
 "*/gravhydro/*/tests/*",
 "*/gravhydro/extern/*",
 "*/gravhydro/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
